<resources>

    
    <string name="app_ico_name">移动灾害报警</string>
    <string name="app_name">基于GIS的手持式移动灾害报警系统</string>
    <string name="app_client_id">12</string>
    <string name="app_copyright">西创  Copyright © 2016&#8211;2017</string>
    
     
    <!--
    <string name="app_ico_name">巡护预警</string>
    <string name="app_name">巡护预警定位终端</string>
    <string name="app_client_id">4</string>
    <string name="app_copyright">汇博致信  Copyright © 2016&#8211;2017</string>
    -->
     
    <string name="baidu_map_license_default">GAFykauHtDM5YWGagm1XU7RPb8LX15pv</string>
    <!-- 网络配置 -->
    <string name="request_type">2</string>
    <string name="default_service_url">http://117.139.162.131:8081/pdms</string>
    <string name="default_socket_url">117.139.162.131</string>
    <string name="default_socket_port">18180</string>
    <string name="app_config_url">http://soft.breaksky.cn/client/android/config.php</string>
<!--     <string name="app_update_url">http://soft.breaksky.cn/client/android/update.php</string> -->
    
    <string name="app_update_url">http://117.139.162.131:8081/pdms/upload/version.xml</string>
    <string name="have_app_run_key">have_app_run</string>
    <string name="empty_str"></string>
    <string name="title_back">&#171;返回</string>
    <!-- 登录信息 -->
    <string name="login_title">登录</string>
    <string name="login_button_name">登录</string>
    <string name="register_button_name">注册</string>
    <string name="login_username">设备号码:</string>
    <string name="login_password">设备密码:</string>
    <string name="login_verifycode">验证码:</string>
    <string name="login_verifycodeimage">点击更换</string>
    <string name="save_password">记住我</string>
    <string name="auto_login">自动登录</string>
    <string name="auto_login_message">%1$s秒自动登录</string>
    <string name="save_password_key">save_password</string>
    <string name="save_username_key">save_username</string>
    <!-- 系统地址 -->
    <string name="login_verify_url">/pdms/basic/device/verifycode.do</string>
    <string name="login_url">/pdms/basic/device/devicelogin.do</string>
    <string name="logout_url">/pdms/basic/device/devicelogout.do</string>
    <string name="query_personnel_url">/pdms/basic/device/querypersonnel.do</string>
    <string name="query_message_file_url">/pdms/basic/device/readfile.do</string>
    <string name="query_work_url">/pdms/basic/device/querywork.do</string>
    <string name="query_dangerfactor_url">/pdms/basic/device/querydangerfactor.do</string>
    <string name="synchronization_url">/pdms/basic/device/synchdata.do</string>
    <!-- 系统配置 -->
    <string name="title_activity_config">设置</string>
    <string name="title_network">网络</string>
    <string name="thread_check_time_title">同步时间</string>
    <string name="thread_check_time_default">5000</string>
    <string name="thread_check_time_key">thread_check_time</string>
    <string name="title_gis">地图</string>
    <string name="gps_check_time_title">定位周期</string>
    <string name="gps_check_time_default">3000</string>
    <string name="gps_check_key">gps_check_time</string>
    <string name="title_cache">缓存</string>
    <string name="cache_checkbox">点击清理缓存</string>
    <string name="cache_checkbox_key">cache_checkbox</string>
    <string name="title_system">系统</string>
    <string name="autorun_checkbox">自动启动</string>
    <string name="autorun_checkbox_key">autorun_checkbox</string>
    <!-- 图片选择 -->
    <string name="folder_name">文件名</string>
    <string name="image_num">图片数量</string>
    <string name="all_folder">所有图片</string>
    <string name="sheet">张</string>
    <string name="shoot">拍摄照片</string>
    <string name="picture">图片</string>
    <string name="finish">完成</string>
    <string name="temp_date">2015年12月2日</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="open_camera_fail">相册初始化失败!</string>
    <string name="empty_sdcard">没有SD卡</string>
    <!-- 注册 -->
    <string name="register_mobile">手机号:</string>
    <string name="register_mobile_verify">验证码:</string>
    <string name="register_mobile_verify_button">点击获取</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="register_name">姓&#160;&#160;&#160;&#160;名:</string>
    <string name="register_idcard">身份证:</string>
    <string name="register_age">年&#160;&#160;&#160;&#160;龄:</string>
    <string name="register_sex">性&#160;&#160;&#160;&#160;别:</string>
    <string name="register_sex_man">男</string>
    <string name="register_sex_woman">女</string>
    <string name="register_region">区&#160;&#160;&#160;&#160;域:</string>
    <string name="register_region_button">点击选择</string>
    <string name="register_address">地&#160;&#160;&#160;&#160;址:</string>
    <string name="register_button">注&#160;&#160;&#160;&#160;册</string>
    <string name="register_cancel_button">取&#160;&#160;&#160;&#160;消</string>
    <!-- 上报事件 -->
    <string name="title_event">灾害报警</string>
    <string name="event_cordinates">地理坐标:</string>
    <string name="event_cordinates_log">经度</string>
    <string name="event_cordinates_lat">纬度</string>
    <string name="event_cordinates_button">定位</string>
    <string name="event_address">发生地址:</string>
    <string name="event_image_layout">现场图片:</string>
    <string name="event_context">描述内容:</string>
    <string name="event_context_type_text">文本</string>
    <string name="event_context_type_voice">语音</string>
    <string name="event_contact">联&#160;&#160;系&#160;&#160;人:</string>
    <string name="event_phone">联系电话:</string>
    <string name="event_submit_button">提&#160;&#160;交</string>
    <!-- 事件处理 -->
    <string name="title_event_process">报警处理</string>
    <string name="event_process_histroy">历史</string>
    <string name="event_process_info_down">报警详细 ▼</string>
    <string name="event_process_info_up">报警详细 ▲</string>
    <string name="event_process_answer">---- 处理回复 -----</string>
    <string name="event_process_info_cordinates">地理坐标:</string>
    <string name="event_process_info_cordinates_button">地图显示</string>
    <string name="event_process_info_address">发生地址:</string>
    <string name="event_process_info_image">现场图片:</string>
    <string name="event_process_info_context">描述内容:</string>
    <string name="event_process_info_contact">联&#160;&#160;系&#160;人:</string>
    <string name="event_process_info_phone">联系电话:</string>
    <string name="event_process_context_type_text">文本</string>
    <string name="event_process_context_type_voice">语音</string>
    <string name="event_process_context_type_photo">图片</string>
    <string name="event_process_info_image_button">查看图片</string>
    <string name="event_process_info_context_file_button">查看文件</string>
    <!-- 地图 -->
    <string name="title_map_show">地图定位</string>
    <string name="map_show_gps_point">实时位置</string>
    <string name="map_show_work">当前任务:</string>
    <string name="map_show_work_button">任务</string>
    <!-- 公告预警 -->
    <string name="title_message">公告预警</string>
    <!-- 个人信息 -->
    <string name="title_person_info">个人信息</string>
    <string name="person_info_mobile">手机号:</string>
    <string name="person_info_password_old">旧密码:</string>
    <string name="person_info_password_new">新密码:</string>
    <string name="person_info_name">姓&#160;&#160;&#160;&#160;名:</string>
    <string name="person_info_idcard">身份证:</string>
    <string name="person_info_age">年&#160;&#160;&#160;&#160;龄:</string>
    <string name="person_info_sex">性&#160;&#160;&#160;&#160;别:</string>
    <string name="person_info_sex_man">男</string>
    <string name="person_info_sex_woman">女</string>
    <string name="person_info_region">区&#160;&#160;&#160;&#160;域:</string>
    <string name="person_info_region_button">点击选择</string>
    <string name="person_info_address">地&#160;&#160;&#160;&#160;址:</string>
    <string name="person_info_modify_button">修&#160;&#160;&#160;&#160;改</string>
    <string name="person_info_cancel_button">取&#160;&#160;&#160;&#160;消</string>
    <!-- 地图选择 -->
    <string name="map_cordinates_cancel_button">取消</string>
    <string name="map_cordinates_submit_button">确认</string>
    <!-- 数据采集 -->
    <string name="title_gather">数据采集</string>
    <string name="gather_submit_button">确认</string>
    <string name="gather_task">任务</string>
    <string name="gather_task_name">(请选择任务)</string>
    <!-- 配置 -->
    <string name="title_config">配置</string>
    <!-- 录音 -->
    <string name="voice_recording_button">录音</string>
    <string name="voice_play_button">播放录音</string>
    <string name="voice_text">按住录音键说话</string>
    <!-- 对话 -->
    <string name="title_call">对话</string>
    <string name="call_personnel_name">(请选择人员)</string>
    <string name="call_personnel">人员</string>
    <string name="title_calllist">对话列表</string>
    <!-- 拍照 -->
    <string name="title_camera">拍照</string>
    <!-- 录音 -->
    <string name="title_voice">录音</string>
    <!-- 状态栏 -->
    <string name="widget_video_alarm">视频报警</string>
    <string name="widget_voice_alarm">语音报警</string>
    <string name="widget_photo_alarm">图片报警</string>
    <!-- reciver 界面 -->
    <string name="reciver_context">一键报警</string>
    <string name="reciver_log">经度:</string>
    <string name="reciver_lat">纬度:</string>
    <string name="reciver_password">新密码:</string>
	<string name="reciver_password_button">确认</string>
	<string name="reciver_timeout">倒计时</string>
</resources>