<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical"
    tools:context="cn.breaksky.rounds.publics.activity.EventActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/report_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/title_back"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="日常汇报"
                android:textSize="18dp" >
            </TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/report_process_history_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/event_process_histroy"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/event_cordinates" >
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" 
                    >

                    <EditText
                        android:id="@+id/report_cordinates_log"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"
                        android:text="@string/event_cordinates_log"
                        android:textColor="@color/grey" >
                    </EditText>

                    <EditText
                        android:id="@+id/report_cordinates_lat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"
                        android:text="@string/event_cordinates_lat"
                        android:textColor="@color/grey" >
                    </EditText>

                    <Button
                        android:id="@+id/report_cordinates_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/event_cordinates_button" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/event_address" >
                </TextView>

                <EditText
                    android:id="@+id/report_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:inputType="textMultiLine" >
                </EditText>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/event_context" >
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@xml/bg_border1"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <RadioGroup
                        android:id="@+id/report_context_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/report_context_type_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/event_context_type_text" />

                        
                    </RadioGroup>

                    <EditText
                        android:id="@+id/report_context_text"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="left|top"
                        android:text="经现场巡查无异常！"
                        android:inputType="textMultiLine"
                        android:visibility="visible" >
                    </EditText>

                    
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/event_contact" >
                </TextView>

                <EditText
                    android:id="@+id/report_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/event_phone" >
                </TextView>

                <EditText
                    android:id="@+id/report_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" >
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/report_submit_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/login_button_bg"
            android:text="@string/event_submit_button"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>