<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_show_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    tools:context="cn.breaksky.rounds.publics.activity.CallActivity"
     android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/call_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/title_back"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_calllist"
                android:textSize="18dp" >
            </TextView>
          
        </LinearLayout>
         <TextView
            android:id="@+id/call_personnel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/call_personnel"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>
     
    </FrameLayout> 
    
     <ListView    
         android:id="@+id/lv_view"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:cacheColorHint="#00000000"   
    android:orientation="vertical" >  
      </ListView>
  </LinearLayout>
