<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    tools:context="cn.breaksky.rounds.publics.activity.VoiceActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:gravity="left|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/voice_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/title_back"
            android:textColor="@color/white"
            android:textSize="18dp" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/title_voice"
                android:textSize="18dp" >
            </TextView>
        </LinearLayout>
    </FrameLayout>
    
    <RelativeLayout
        android:id="@+id/voice_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_alignParentBottom="true">

            <ProgressBar
                android:id="@+id/volume_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_marginBottom="140dp"
                 style="?android:attr/progressBarStyleHorizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/voice_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="70dp"
                android:text="@string/voice_text"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/voice_recording_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="7dp"
                android:background="#00000000"
                android:contentDescription="@string/voice_recording_button"
                android:scaleType="fitXY"
                android:src="@drawable/voice_recording" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>